--- a/beUclaEduMain.css
+++ b/beUclaEduMain.css
@@ -9,14 +9,19 @@
 	border-radius: 1px;
 	border-color: #3496E1;	
 	height: 14px;
-	width: 28px;
+	width: 26px;
 
-	text-indent: 2px;
+	text-indent: 1px;
     font-size: 12px;
     color: #FFFFFF;
     font-weight: 700;
-	cursor:pointer;
 
+}
+.inst-button-bwalk:visited {
+    color: #FFFFFF;
+}
+.inst-button-bwalk:hover {
+    color: #A829F2;
 }
 
 .instructor-name-paragraph{
@@ -34,7 +39,6 @@
 }
 
 .inst-rating-popup-cont.hide{
-	/*position: relative;*/
 	display: none;
 }
 
@@ -42,16 +46,16 @@
 	position: relative;
 	display: block;
 	float: right;
+	max-width: 130px;
 
-	font-size: 10px;
-	line-height: 12px;
 	color: #000000;
 	background-color: #FFFFFF;
-
 }
-
 
 .inst-rating-popup td{
 	padding-right:4px;
-	font-size: 11px;
+}
+
+.inst-rating-popup-footer{
+	padding-top:10px;
 }
