--- a/saUclaEduMain.css
+++ b/saUclaEduMain.css
@@ -1,3 +1,10 @@
+/* Instructor Name Modifiers */
+.instructorColumn p{
+	position: relative;
+    min-height: 20px;
+}
+
+/* Button modifiers */
 .inst-button-bwalk {
 	position: relative;
 	margin-left: 5px;
@@ -15,7 +22,6 @@
     font-size: 12px;
     color: #FFFFFF;
     font-weight: 700;
-
 }
 .inst-button-bwalk:visited {
     color: #FFFFFF;
@@ -23,31 +29,30 @@
 .inst-button-bwalk:hover {
     color: #A829F2;
 }
-
-.bad {
-	background-color: #FF0000;
-	border-color: #FF0000;	
+.inst-button-bwalk:link {
+    color: #FFFFFF;
 }
 
-.good {
-	background-color: #00FF00;
-	border-color: #00FF00;	
+.inst-rating-bad {
+	background-color: #B20011;
+	border-color: #B20011;	
 }
 
-.instructorColumn p{
-	position: relative;
-    min-height: 20px;
+.inst-rating-good {
+	background-color: #03BC35;
+	border-color: #03BC35;	
 }
 
+
+
+/* Popup modifiers */
 .inst-rating-popup-cont.show{
 	display: block;
 	top: 5px;
-
-	/*background-color: transparent;*/
+	left: -65px;
 }
 
 .inst-rating-popup-cont.hide{
-	/*position: relative;*/
 	display: none;
 }
 
@@ -55,17 +60,68 @@
 	position: relative;
 	display: block;
 	float: right;
+
+    width: 130px;
+    text-align: center;
+}
+
+/* Popup Title */
+.inst-rating-title-div{
 	font-size: 12px;
 	line-height: 12px;
+	padding: 5px;
+	background-color: #3496E1;
+	color: #FFFFFF;
+}
+.inst-rating-title-div-nf{
+	font-size: 12px;
+	line-height: 12px;
+	padding: 5px;
+	background-color: #FFFFFF;
+	color: #000000;
 }
 
-
-.inst-rating-popup td{
-	padding-right:4px;
+/* Popup Rating Table */
+.inst-rating-table{
+	width:100%;
+	margin-top:5px;
+}
+.inst-rating-table td{
 	font-size: 12px;
 }
 
-.inst-rating-popup-footer{
-	padding-top: 10px;
-	font-size: 7px;
+/* Popup Grades Table */
+.grades-dist-table{
+	margin-top: 5px;
+	width:100%;
+}
+.grades-dist-table-title-cell{
+	padding: 5px;
+	font-size: 12px;
+	line-height: 12px;
+	color: #FFFFFF;
+}
+.grades-dist-bar-cell{
+	padding-right: 2px;
+	padding-left: 2px;
+}
+.grades-dist-bar{
+	position: relative;
+	background-color: #3496E1;
+	border-width: 1px;
+	border-radius: 1px;
+	border-color: #3496E1;	
+}
+.grades-dist-grade-label-cell{
+	font-size: 10px;
+
+}
+
+/* Popup Footer */
+.inst-rating-footer-div{
+	margin-top: 5px;
+	padding: 5px;
+	font-size: 8px;
+	line-height: 8px;
+	color: #777777;
 }
